Fix about copy mobile spacing

--- a/src/components/AboutInfo/styles.scss
+++ b/src/components/AboutInfo/styles.scss
@@ -75,8 +75,7 @@
       }
 
       .copy {
-        height: 100%;
-        margin: 40px 0;
+        padding: 40px 0;
       }
     }
   }
